examples/test/testpolicy7358.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7358
  namespace: namespace66
spec:
  podSelector:
    matchLabels:
      key43: value25
      key3: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value25
          key48: value36
      podSelector:
        matchLabels:
          key48: value36
          key46: value14
